Синтаксис: Цикл for...of.

--- a/src/main/Frontend/index.html
+++ b/src/main/Frontend/index.html
@@ -16,5 +16,6 @@
     <!--<script src="dist/spread.js"></script>-->
     <!--<script src="dist/templates.js"></script>-->
     <script src="dist/parameters.js"></script>
+    <script src="dist/for.js"></script>
 </body>
 </html>
