--- a/src/main/Frontend/index.html
+++ b/src/main/Frontend/index.html
@@ -15,7 +15,8 @@
     <!--<script src="dist/const.js"></script>-->
     <!--<script src="dist/spread.js"></script>-->
     <!--<script src="dist/templates.js"></script>-->
-    <script src="dist/parameters.js"></script>
-    <script src="dist/for.js"></script>
+    <!--<script src="dist/parameters.js"></script>-->
+    <!--<script src="dist/for.js"></script>-->
+    <script src="dist/objects.js"></script>
 </body>
 </html>
