--- a/src/main/Frontend/index.html
+++ b/src/main/Frontend/index.html
@@ -17,6 +17,7 @@
     <!--<script src="dist/templates.js"></script>-->
     <!--<script src="dist/parameters.js"></script>-->
     <!--<script src="dist/for.js"></script>-->
-    <script src="dist/objects.js"></script>
+    <!--<script src="dist/objects.js"></script>-->
+    <script src="dist/classes.js"></script>
 </body>
 </html>
