Синтаксис: Стрелочные функции.

--- a/src/main/Frontend/index.html
+++ b/src/main/Frontend/index.html
@@ -19,6 +19,7 @@
     <!--<script src="dist/for.js"></script>-->
     <!--<script src="dist/objects.js"></script>-->
     <!--<script src="dist/classes.js"></script>-->
-    <script src="dist/inheritance.js"></script>
+    <!--<script src="dist/inheritance.js"></script>-->
+    <script src="dist/arrow-function.js"></script>
 </body>
 </html>
