--- a/src/main/Frontend/index.html
+++ b/src/main/Frontend/index.html
@@ -20,6 +20,7 @@
     <!--<script src="dist/objects.js"></script>-->
     <!--<script src="dist/classes.js"></script>-->
     <!--<script src="dist/inheritance.js"></script>-->
-    <script src="dist/arrow-function.js"></script>
+    <!--<script src="dist/arrow-function.js"></script>-->
+    <script src="dist/destructing.js"></script>
 </body>
 </html>
