Синтаксис: Создание обещаний (promises).

--- a/src/main/Frontend/index.html
+++ b/src/main/Frontend/index.html
@@ -21,6 +21,7 @@
     <!--<script src="dist/classes.js"></script>-->
     <!--<script src="dist/inheritance.js"></script>-->
     <!--<script src="dist/arrow-function.js"></script>-->
-    <script src="dist/destructing.js"></script>
+    <!--<script src="dist/destructing.js"></script>-->
+    <script src="dist/promise.js"></script>
 </body>
 </html>
