--- a/src/main/Frontend/index.html
+++ b/src/main/Frontend/index.html
@@ -3,25 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        #movies {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        img{
+            flex: 1 100px;
+            margin: 5px;
+        }
+    </style>
 </head>
 <body>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <script src="dist/script.js"></script>
-    <script src="dist/let.js"></script>
-    <!--<script src="dist/const.js"></script>-->
-    <!--<script src="dist/spread.js"></script>-->
-    <!--<script src="dist/templates.js"></script>-->
-    <!--<script src="dist/parameters.js"></script>-->
-    <!--<script src="dist/for.js"></script>-->
-    <!--<script src="dist/objects.js"></script>-->
-    <!--<script src="dist/classes.js"></script>-->
-    <!--<script src="dist/inheritance.js"></script>-->
-    <!--<script src="dist/arrow-function.js"></script>-->
-    <!--<script src="dist/destructing.js"></script>-->
-    <script src="dist/promise.js"></script>
+    <div id="movies">
+    </div>
+<!--для поддержки Ie и operaMini-->
+<!--<script src="node_modules/babel-polyfill/dist/polyfill.min.js"></script>-->
+<script src="src/promise.js"></script>
 </body>
 </html>
