Синтаксис: Создание генераторов (generators).

--- a/src/main/Frontend/index.html
+++ b/src/main/Frontend/index.html
@@ -19,6 +19,6 @@
     </div>
 <!--для поддержки Ie и operaMini-->
 <!--<script src="node_modules/babel-polyfill/dist/polyfill.min.js"></script>-->
-<script src="src/generators.js"></script>
+<script src="src/generators-creating.js"></script>
 </body>
 </html>
