Webpack: Простая сборка - Внешний доступ к модулям

--- a/src/main/Webpack/home.html
+++ b/src/main/Webpack/home.html
@@ -6,6 +6,8 @@
     <script src="dist/build.js"></script>
 </head>
 <body>
-
+    <script>
+        home.welcome("something?");
+    </script>
 </body>
 </html>
